--- a/book.bib
+++ b/book.bib
@@ -55,3 +55,24 @@
   year={1978},
   publisher={Institute of Mathematical Statistics}
 }
+
+@article{efron2004least,
+  title={Least angle regression},
+  author={Efron, Bradley and Hastie, Trevor and Johnstone, Iain and Tibshirani, Robert},
+  journal={The Annals of statistics},
+  volume={32},
+  number={2},
+  pages={407--499},
+  year={2004},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{yeh2018building,
+  title={Building real estate valuation models with comparative approach through case-based reasoning},
+  author={Yeh, I-Cheng and Hsu, Tzu-Kuang},
+  journal={Applied Soft Computing},
+  volume={65},
+  pages={260--271},
+  year={2018},
+  publisher={Elsevier}
+}
