--- a/03-linear.Rmd
+++ b/03-linear.Rmd
@@ -15,9 +15,7 @@
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator*{\argmax}{arg\,max}
 
-```{r global.options, include = FALSE}
-  options(width = 1000)
-  knitr::opts_chunk$set(fig.align = "center")
+```{r include = FALSE}
   knitr::opts_chunk$set(fig.dim = c(8, 6), out.width = "60%", fig.align = 'center')
 ```
 
@@ -27,7 +25,7 @@ This chapter severs several purposes. First, we will review some basic knowledge
 
 ## Example: real estate data 
 
-This [Real Estate data](https://archive.ics.uci.edu/ml/datasets/Real+estate+valuation+data+set) is provided on the [UCI machine learning repository](https://archive.ics.uci.edu/ml/index.php). The goal of this dataset is to predict the unit house price based on six different covariates: 
+This [Real Estate data](https://archive.ics.uci.edu/ml/datasets/Real+estate+valuation+data+set) [@yeh2018building] is provided on the [UCI machine learning repository](https://archive.ics.uci.edu/ml/index.php). The goal of this dataset is to predict the unit house price based on six different covariates: 
 
   * `date`: The transaction date (for example, 2013.250=2013 March, 2013.500=2013 June, etc.)
   * `age`: The house age (unit: year)
@@ -153,126 +151,88 @@ Usually, printing out the summary is sufficient. However, further details can be
          col = "darkorange", pch = 19, cex = 0.5)
 ```
 
-This can be viewed as either a convex optimization problem or projections on the $n$ dimensional vector space. 
+It seems that the error variance is not constant (as a function of the fitted values), hence additional techniques may be required to handle this issue. However, that is beyond the scope of this book. 
 
+### Adding Covariates
 
-### Linear regression as an optimization
-
-```{r fig.width=5, fig.height=5}
-    # generate data for a simple linear regression 
-    set.seed(20)
-    n = 100
-    x <- cbind(1, rnorm(n))
-    y <- x %*% c(1, 0.5) + rnorm(n)
-    
-    # calculate the residual sum of squares for a grid of beta values
-    rss <- function(b, x, y) sum((y - x %*% b)^2)
-    b1 <- b2 <- seq(0, 2, length= 20)
-    z = matrix(apply(expand.grid(b1, b2), 1, rss, x, y), 20, 20)
-    
-    # 3d plot for RSS
-    par(mar = c(1,1,3,1))
-    persp(b1, b2, z, xlab = "beta 1", ylab = "beta 2", zlab = "RSS",
-          main="Residual Sum of Squares", col = "springgreen", shade = 0.6,
-          theta = 30, phi = 5)
-    
-    # The solution can be solved by any optimization algorithm 
-    optim(c(0, 0), rss, x = x, y = y)$par
-```
-
-### Linear regression as projections {#linear-reg}
-
-Another view is through projections in vector space. Consider each column of $\mathbf{X}$ as a vector, and project $\mathbf{y}$ onto the column space of $\mathbf{X}$. The project is 
-
-$$ \widehat{\mathbf{y}} = \mathbf{X} (\mathbf{X}^\text{T} \mathbf{X})^{-1}\mathbf{X}^\text{T} \mathbf{y} \doteq {\mathbf{H}} \mathbf{y}, $$
-where $\mathbf{H}$ is a projection matrix. And the residuals are simply 
-
-$$ \widehat{\mathbf{e}} = \mathbf{y} - \widehat{\mathbf{y}} = (\mathbf{I} - \mathbf{H}) \mathbf{y} $$
-When the number of variables is large, inverting $\mathbf{X}^\text{T} \mathbf{X}$ is expansive. The `R` function `lm()` does not calculate the inverse directly. Instead, QR decomposition can be used. You can try a larger $n$ and $p$ to see a significant difference. This is only for demonstration. They are not required for our course. 
+It is pretty simple if we want to include additional variables. This is usually done by connecting them with the `+` sign on the right hand side of `~`. R also provide convenient ways to include interactions and higher order terms. The following code with the interaction term between `age` and `distance`, and a squared term of `distance` should be self-explanatory. 
 
 ```{r}
-    # generate 100 observations with 3 variables
-    set.seed(1)
-    n = 1000
-    p = 500
-    x = matrix(rnorm(n*p), n, p)
-    X = cbind(1, x) # the design matrix, including 1 as the first column
-    
-    # define the true beta, the first entry is the intercept
-    b = as.matrix(c(1, 1, 0.5, rep(0, p-2))) 
-    
-    # generate training y with Gaussian errors
-    y = X %*% b + rnorm(n)
-    
-    # fit a linear regression model 
-    lm.fit = lm(y ~ x)
-    
-    # look at the coefficients beta hat
-    head(lm.fit$coef)
-    
-    # using normal equations by inverting the X'X matrix: b = (X'X)^-1 X'y 
-    # however, this is very slow
-    # check ?solve
-    system.time({beta_hat = solve(t(X) %*% X) %*% t(X) %*% y})
-    head(beta_hat)
-    
-    # you can avoid the inversion by specifying the linear equation system X'X b = X'y 
-    system.time({beta_hat = solve(t(X) %*% X, t(X) %*% y)})    
-    
-    # A better approach is to use QR decomposition or the Cholesky decomposition 
-    # The following codes are not necessarily efficient, they are only for demonstration purpose
-    
-    # QR decomposition
-    # direct calling the qr.coef function
-    system.time({beta_hat = qr.coef(qr(X), y)})
-    
-    # or 
-    system.time({beta_hat = qr.solve(t(X) %*% X, t(X) %*% y)})
-    
-    # if you want to see what Q and R are
-    QR = qr(X)
-    Q = qr.Q(QR)
-    R = qr.R(QR)
-    
-    # get inverse of R, you can check R %*% R_inv yourself
-    # the backsolve/forwardsolve functions can be used to solve AX = b for upper/lower triangular matrix A 
-    # ?backsolve
-    R_inv = backsolve(R, diag(p+1), upper.tri = TRUE, transpose = FALSE)
-    beta_hat = R_inv %*% t(Q) %*% y
-    
-    # Cholesky Decomposition 
-    
-    # the chol function gives upper triangular matrix
-    # crossprod(X) = X'X
-    system.time({
-    R = chol(crossprod(X))
-    w = backsolve(R, t(X) %*% y, upper.tri = TRUE, transpose = TRUE)
-    beta_hat = backsolve(R, w, upper.tri = TRUE, transpose = FALSE)
-    })
-    
-    # or equivalently 
-    R = t(chol(crossprod(X)))
-    w = forwardsolve(R, t(X) %*% y, upper.tri = FALSE, transpose = FALSE)
-    beta_hat = forwardsolve(R, w, upper.tri = FALSE, transpose = TRUE) # the transpose = TRUE means that we are solving for R'b = w instead of Rb = w 
+    lm.fit2 = lm(price ~ age + distance + age*distance + I(distance^2), data = realestate)
+    summary(lm.fit2)
 ```
+
+If you choose to include all covariates presented in the data, then simply use `.` on the right hand side of `~`. However, you should always be careful when doing this because some dataset would contain meaningless variables such as subject ID. 
+
+```{r eval=FALSE}
+    lm.fit3 = lm(price ~ ., data = realestate)
+```
+
+### Categorical Variables
+
+The store variable has several different values. We can see that it has 11 different values. One strategy is to model this as a continuous variable. However, we may also consider to discretize it. For example, we may create a new variable, say `store.cat`, defined as follows
+
+```{r}
+  table(realestate$stores)
+
+  # define a new factor variable
+  realestate$store.cat = as.factor((realestate$stores > 0) + (realestate$stores > 4))
+  table(realestate$store.cat)
+  levels(realestate$store.cat) = c("None", "Several", "Many")
+  head(realestate$store.cat)
+```
+
+This variable is defined as a factor, which is often used for categorical variables. Since this variable has three different categories, if we include it in the linear regression, it will introduce two additional variables (using the third as the reference):
+
+```{r}
+    lm.fit3 = lm(price ~ age + distance + store.cat, data = realestate)
+    summary(lm.fit3)
+```
+
+There are usually two types of categorical variables:
+
+  * Ordinal: the numbers representing each category is ordered, e.g., how many stores in the neighborhood. Oftentimes nominal data can be treated as a continuous variable.
+  * Nominal: they are not ordered and can be represented using either numbers or letters, e.g., ethnic group. 
+  
+The above example is treating `store.cat` as a nominal variable, and the `lm()` function is using dummy variables for each category. This should be our default approach to handle nominal variables. 
 
 ## Model Selection Criteria and Algorithm
 
-### Example: `diabetes` dataset
-
-We use the `diabetes` dataset from the `lars` package as a demonstration of model selection. 
+We will use the `diabetes` dataset from the `lars` package as a demonstration of model selection. Ten baseline variables include age, sex, body mass index, average blood pressure, and six blood serum measurements. These measurements were obtained for each of n = 442 diabetes patients, as well as the outcome of interest, a quantitative measure of disease progression one year after baseline. More details are available in @efron2004least. Our goal is to select a linear model, preferably with a small number of variables, that can predict the outcome. To select the best model, commonly used strategies include Marrow's $C_p$, AIC (Akaike information criterion) and BIC (Bayesian information criterion). Further derivations will be provide at a later section. 
 
 ```{r}
+    # load the diabetes data
     library(lars)
     data(diabetes)
     diab = data.frame(cbind(diabetes$x, "Y" = diabetes$y))
+
+    # fit linear regression with all covariates
+    lm.fit=lm(Y~., data=diab)
+```
+
+The idea of model selection is to apply some penalty on the number of parameters used in the model. In general, they are usually in the form of 
+
+$$\text{Goodness-of-Fit} + \text{Complexity Penality}$$
+
+For example, the Marrows' $C_p$ criterion minimize the following quantity (a derivation is provided at Section \@ref(mallows-cp)): 
+
+$$\text{RSS} + 2 p \widehat\sigma_{\text{full}}^2$$
+Note that the $\sigma_{\text{full}}^2$ refers to the residual variance estimation based on the full model, i.e., will all variables. Hence, this formula cannot be used when $p > n$ because you would not be able to obtain a valid estimation of $\sigma_{\text{full}}^2$. Nonetheless, we can calculate this quantity with the diabetes dataset
+
+```{r}
+    p = 11
+  
+    # obtain residual sum of squares
+    RSS = sum(residuals(lm.fit)^2)
     
-    # A Brief Description of the Diabetes Data (Efron et al, 2004):
-    # Ten baseline variables: age, sex, body mass index, average blood pressure, and six blood serum
-    # measurements were obtained for each of n = 442 diabetes patients, as well as
-    # the response of interest, a quantitative measure of disease progression one year after baseline 
-    
+    # use the formula directly to calculate the Cp criterion 
+    Cp = RSS + 2*p*summary(lm.fit)$sigma^2
+```
+
+
+```{r}
     lmfit=lm(Y~., data=diab)
+    
     
     # When we use normal distribution likelihood for the errors, there are 12 parameters
     # The function AIC() directly calculates the AIC score from a lm() fitted model 
@@ -365,3 +325,6 @@ The `leaps` package will calculate the best model of each model size. Then we ca
     points(msize, BIC, col="black", type="b")
     legend("topright", lty=rep(1,3), col=c("red", "blue", "black"), legend=c("Cp", "AIC", "BIC"))
 ```
+
+
+##  Mallows' $C_p$ Derivation {#mallows-cp}
