--- a/preamble.tex
+++ b/preamble.tex
@@ -1,9 +1,3 @@
-%-----------------------------------------------------------------%
-% This file contains some notations I use
-% for teaching and talk slides
-% Ruoqing Zhu, UIUC, Sep 25, 2019
-%-----------------------------------------------------------------%
-
 \usepackage{booktabs}
 \usepackage{amsthm}
 \usepackage{amsmath, amssymb, amscd, mathrsfs}
@@ -15,6 +9,8 @@
 
 \definecolor{deepskyblue}{HTML}{00BFFF}
 \definecolor{darkorange}{HTML}{FF8C00}
+\definecolor{newblue}{HTML}{005AB5}
+\definecolor{newred}{HTML}{DC3220}
 
 % UIUC colors
 
