--- a/03-linear.Rmd
+++ b/03-linear.Rmd
@@ -247,7 +247,7 @@ We can compare this with another sub-model, say, with just `age` and `glu`:
     RSS_sub = sum(residuals(lm.fit_sub)^2)
     
     # use the formula directly to calculate the Cp criterion 
-    Cp_sub = RSS_sub + 2*3*summary(lm.fit_sub)$sigma^2
+    Cp_sub = RSS_sub + 2*3*summary(lm.fit)$sigma^2
     Cp_sub
 ```
 
